--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.ControlLMA"
         tools:targetApi="31">
         <activity
-            android:name=".ui.MainActivity"
+            android:name=".ui.views.MainActivity"
             android:exported="true"
             android:label="@string/app_name"
             android:theme="@style/Theme.ControlLMA">
